# modules/framework/galasa-parent/dev.galasa.framework.api.openapi/src/main/resources/openapi.yaml
@@ -1554,16 +1554,6 @@ paths:
           schema:
             type: string
           example: dev.galasa.inttests.simbank.local.mvp.SimBankLocalJava11UbuntuMvp
-        - name: page
-          in: query
-          description: |
-            Deprecated (since 0.37.0) - Use the 'cursor' query parameter instead.
-            Causes a specific page in the available results to be returned.
-            The first page is page 1.
-            If omitted, then page 1 is returned.
-          schema:
-            type: integer
-          example: 2
         - name: size
           in: query
           description: |
@@ -1626,16 +1616,6 @@ paths:
           schema:
             type: string
           example: my-zos-tests
-        
-        # Temporary feature flag to enable cursor-based pagination
-        - name: includeCursor
-          in: query
-          description: |
-            A boolean flag to enable cursor-based pagination and return the next page cursor
-            in the response. If omitted, it will default to false.
-          schema:
-            type: string
-          example: 'true'
         - name: cursor
           in: query
           description: |
@@ -3564,11 +3544,7 @@ components:
     RunResults:
       type: object
       properties:
-        pageNumber:
-          type: integer
         pageSize:
-          type: integer
-        numPages:
           type: integer
         amountOfRuns:
           type: integer
